<resources>
    <string name="app_name">MMT Business</string>

    <!--Live URL string-->


    <!-- Strings related to login -->
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="action_sign_in">Sign In</string>
    <string name="forgot_pswd">Forgot Password ?</string>
    <string name="error_invalid_user_id">Invalid User ID.</string>
    <string name="error_required_user_id">Please Enter User ID.</string>

    <!--Strings Related to Forgot Password-->
    <string name="btn_submit">Submit</string>
    <string name="note">Note :</string>
    <string name="note_detail">1 ) Your new password will be sent on your registered mobile number or Email ID. \n2 ) If you don\'t receive Email or SMS within one hour please contact our support.</string>
    <string name="click_here_to_login">Click Here to Login.</string>
    <string name="who_introduce_you">Who Introduces You to MMT Business</string>

    <!--Strings Related to Register -->
    <string name="generation_structure">Sponsor Genealogy</string>
    <string name="sponsorId">Sponsor ID</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="name">Name</string>
    <string name="dob">DOB</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="login_detail">Login Detail</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile Number</string>
    <string name="PANno">PAN Number</string>
    <string name="terms_conditions">1) It is kind advise to you that you promote Business as per actual. Company will not responsible for your miss commitments in the market through any manner.\n\n2) Company provides you online account as your ID with password. It contains all your legal information , Transaction Balance, Team detail, Bonus details etc.\n\n3) KYC Documents is mandatory.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="error_required_sponsorID">Please Enter Sponsor ID.</string>
    <string name="error_invalid_sponsorID">Invalid Sponsor ID.</string>
    <string name="error_invalid_dob">Invalid DOB.</string>
    <string name="error_required_mobile_number">Please Enter mobile number.</string>
    <string name="error_invalid_mobile_number">Invalid Mobile Number.</string>
    <string name="error_invalid_PANno">Invalid PAN Number.</string>
    <string name="error_required_password">Please Enter Password.</string>
    <string name="error_required_name">Please Enter Name.</string>

    <!--Strings Related to InputType Digits-->
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="numberic">0123456789</string>

    <!--strings related to change password-->
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_required_old_password">Please Enter Old Password.</string>
    <string name="error_required_new_password">Please Enter New Password.</string>
    <string name="error_required_confirm_password">Please Enter Confirm Password.</string>
    <string name="password_mismatch">Confirm Password &amp; New Password should be same.</string>
    <string name="update_changes">Update changes</string>
    <string name="password_type">Password Type</string>
    <string name="error_required_pass_type">Please Select Password type.</string>

    <!--Strings Related to DashBoard-->
    <string name="dashboard">Dashboard</string>

    <!--Strings Related to Navigation Drawer-->
    <string name="my_profile">My Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="upload_kyc">Upload KYC Documents</string>
    <string name="sponsor_downline">Sponsor Team Detail</string>
    <string name="bv_detail_report">My Direct Members</string>
    <string name="welcome_letter">Welcome Letter</string>

    <!--<string name="purchase_products">Purchase Products</string>-->
    <string name="wallet_detail">Wallet Transaction Detail</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="member_id">Member ID</string>
    <string name="activation_date">Activation Date</string>

    <!--<string name="showing">(Showing 100 of %1$s records)</string>-->
    <!--txt_wb.setText(Html.fromHtml(getResources().getString(R.string.my_wallet_balance, wallet_balance)));-->

    <string name="txt_nomineedetails">Nominee Detail</string>
    <string name="btn_updateMyProfile">Update Profile</string>
    <string name="txt_userId">User ID</string>
    <string name="txt_email">Email</string>
    <string name="txt_city">City</string>
    <string name="txt_district">District</string>
    <string name="txt_state">State</string>
    <string name="txt_pinCode">Pin Code</string>
    <string name="txt_bankName">Bank Name</string>
    <string name="txt_bankAcntNumber">Bank A/C No.</string>
    <string name="txt_bankIfsc">Bank IFSC</string>
    <string name="txt_bankBranch">Bank Branch</string>
    <string name="txt_nomineeRelation">Nominee Relation</string>
    <string name="error_invalid_email">Invalid Email Address.</string>

    <!--Welcome Letter string-->

    <!-- logout message -->
    <string name="txt_signout_message">Are you sure you want to logout ?</string>
    <string name="txt_signout_yes">Yes</string>
    <string name="txt_signout_no">No</string>
    <string name="txt_networkAlert">No Network Connectivity</string>
    <string name="txt_info">Dear Distributor,\nCongratulation, On your decision to soar sky high with us.\n\nYou are now a part of the opportunity of the millennium. MMT Business Trading an exciting people business. A business that has the potential to Turn Your dreams into reality. As you build your business, you will establish lifelong friendship and develope support system unparalleled in any other business.\n\nMMT Business is here to H.E.L.P.( High Energy Level participation) you to be successful. We pledge our best effort to provide the level of continuing support necessary to help make you business a total success.\n\nThe bottom line of MMT Business When you network with us, we all together stand to win and ensure that we effect many hundreds and thousands of lives in positive manner by spreading the total success attitude.\n\nWe are confident that you will get a lot of satisfaction from your involvement with B Prime and we wish you every Success!\n\nKeep it up! See you at the top!\n\nWinning Regards,\nMMT Business\n</string>
    <string name="guardian_name">Guardian Name</string>

    <string-array name="selectRelation">
        <item>S/O</item>
        <item>W/O</item>
        <item>C/O</item>
    </string-array>

    <!--Strings Related to Home Screen-->
    <!--Section 1-->

    <string name="hint_et_search">What are you looking for ?</string>

    <!--UpdateProfile Screen string-->
    <string name="hint_txt_pinCode">Pin Code</string>
    <string name="hint_et_email">Enter Email</string>
    <string name="hint_txt_nomineeName">Nominee Name</string>
    <string name="txt_bankInfo">Bank Detail</string>

    <!--Change Password Screen string-->

    <string name="error_et_mr_name">Please Enter name.</string>
    <string name="error_et_mr_fname">Please Enter Guardian name.</string>
    <string name="error_et_mr_fname_prefix">Please Select prefix.</string>
    <string name="error_et_mr_date">Please Select date of birth.</string>
    <string name="error_et_mr_address">Please Enter address.</string>
    <string name="error_et_mr_state">Please Select state.</string>
    <string name="error_et_mr_mobileNumber1">Please Enter correct mobile number.</string>
    <string name="error_et_Ifsc">Please Enter IFSC code.</string>
    <string name="error_et_mr_Ifsc">Invalid IFSC code.</string>
    <string name="error_et_mr_PINno">Invalid PIN code.</string>


    <!--Strings Related to Home-->


    <!--Section 1-->

    <!--Section 2-->
    <string name="datacard">Datacard</string>
    <string name="electricity">Electricity</string>
    <string name="dth">DTH</string>
    <string name="metro">Metro</string>
    <string name="broadband">Broadband</string>
    <string name="fees">Fee</string>
    <string name="gas">Gas</string>
    <string name="gold">Gold</string>
    <string name="Landline">Landline</string>
    <string name="water">Water</string>
    <string name="financial">Financial</string>

    <!--Section 3-->
    <string name="movies">Movies</string>
    <string name="bus">Bus</string>
    <string name="flights">Flights</string>
    <string name="trains">Trains</string>
    <string name="hotels">Hotels</string>
    <string name="free_movies">Free Movies</string>
    <string name="events">Events</string>
    <string name="car_bike">Car &amp; Bike</string>
    <string name="parks">Parks</string>
    <string name="gift_cards">Gift Cards</string>

    <!--Sextion 4-->
    <string name="electronics">Electronics</string>
    <string name="women_fashion">Women Fashion</string>
    <string name="men_fashion">Men Fashion</string>
    <string name="home_kitchen">Home &amp; Kitchen</string>
    <string name="sport_fitness">Sport &amp; Fitness</string>
    <string name="car_accessories">Car Accessories</string>
    <string name="baby_kids">Baby &amp; Kids</string>
    <string name="stationery">Stationery</string>
    <string name="music_instruments">Music Instrument</string>

    <!--Section 5-->
    <string name="home">Home</string>
    <string name="mail">Mail</string>
    <string name="notifications">Notifications</string>

    <!--Strings Related to Mobile Recharge-->
    <string name="mobile_recharge_recharge">Recharge your Mobile</string>
    <string name="prompt_mobile_number">Enter your mobile number</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>

    <string name="prompt_amount">Enter Amount</string>
    <string name="proceed_to_recharge">Proceed to Recharge</string>


    <!--Strings Related to DTH Recharge-->
    <string name="DTH_recharge_recharge">Recharge your DTH</string>
    <string name="prompt_DTH_subscriber_id">Enter your Subscriber ID</string>
    <string name="subscriber_id_required">Subscriber ID is required</string>
    <string name="subscriber_id_invalid">Invalid Subscriber ID</string>

    <string name="error_required_downlineID">Please Enter Downline Member ID.</string>
    <string name="error_invalid_downlineID">Invalid Downline Member ID.</string>

</resources>