<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.vpipl.mmtbusiness.Forget_Password_Activity"
    android:background="@color/app_color_white">

    <include layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:fontFamily="@font/gisha_0"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/app_color_white"
        android:singleLine="true"
        android:text="Forgot Password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/app_color_black"
        android:textAllCaps="true"
        android:layout_height="46dp"
        tools:ignore="Deprecated,HardcodedText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_green_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        android:background="@color/app_color_white"
        android:layout_marginTop="30dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:minHeight="52dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText android:fontFamily="@font/gisha_0"
                android:id="@+id/edtxt_userid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_orange_bottom_line"
                android:maxLength="10"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textSize="14sp"
                tools:ignore="Deprecated,HardcodedText" />


        </android.support.design.widget.TextInputLayout>



        <Button android:fontFamily="@font/gisha_0"
            android:id="@+id/button_submit"
            android:text="@string/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:focusableInTouchMode="false"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_blue_circle_rectangle"
            android:layout_marginBottom="15dp" />


        <TextView android:fontFamily="@font/gisha_0"
            android:text="@string/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light" />

        <TextView android:fontFamily="@font/gisha_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"

            android:lineSpacingExtra="4sp"
            android:text="@string/note_detail"
            android:textColor="@color/color_text_grey" />

        <TextView android:fontFamily="@font/gisha_0"
            android:text="@string/click_here_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_login"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/color__bg_orange" />

    </LinearLayout>

</LinearLayout>